# casa

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  main.py  pyproject.toml  requirements.txt  shell.nix
src/: lib.rs  main.rs
