[package]
name = "casa"
version = "0.1.0"
edition = "2018"
authors = ["Adrian Sadłocha <adrian@sadlocha.eu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "casa"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
