[tool.poetry]
name = "casa"
version = "0.1.0"
description = "A simple PWA to track personal expenses."
authors = ["Adrian Sadłocha <adrian@sadlocha.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "2.11.3"
MarkupSafe = "1.1.1"
PyYAML = "5.4.1"
Rx = "1.6.1"
aiofiles = "0.5.0"
aniso8601 = "7.0.0"
async-exit-stack = "1.0.1"
async_generator = "1.10"
certifi = "2020.12.5"
chardet = "4.0.0"
click = "7.1.2"
dnspython = "2.1.0"
email-validator = "1.1.2"
fastapi = "0.63.0"
graphene = "2.1.8"
graphql-core = "2.3.2"
graphql-relay = "2.0.1"
h11 = "0.12.0"
httptools = "0.1.1"
idna = "2.10"
itsdangerous = "1.1.0"
orjson = "3.5.1"
promise = "2.3"
pydantic = "1.8.1"
python-dotenv = "0.16.0"
python-multipart = "0.0.5"
requests = "2.25.1"
six = "1.15.0"
starlette = "0.13.6"
typing-extensions = "3.7.4.3"
ujson = "3.2.0"
urllib3 = "1.26.4"
uvicorn = "0.13.4"
uvloop = "0.15.2"
watchgod = "0.7"
websockets = "8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
