[tool.poetry]
name = "casa"
version = "0.1.0"
description = "A simple PWA to track personal expenses."
authors = ["Adrian Sadłocha <adrian@sadlocha.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "3.1.1"
fastapi = "0.75.2"
pydantic = "1.9.0"
python-multipart = "^0.0.5"
uvicorn = "0.17.6"
maturin = "^0.12.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
